# AI_AutoTranslate

./: PdfTextAnalizer.py  README.md  TextFile.txt  TextFromBook.docx  Translated_Text.docx  TranslatorFile.py  downloader.py  main.py  pyproject.toml  requirements.txt
